fixed-radio-button-responsiveness (#516)
Fixed switch buttons misalignment on decreasing screen size in Speech settings

--- a/src/components/Settings/Settings.css
+++ b/src/components/Settings/Settings.css
@@ -246,3 +246,9 @@ h5 {
 input[type=file]{
   display: none;
 }
+
+@media screen and (max-width: 500px) {
+  .speechSettingDiv {
+    width: 70%;
+  }
+}
